UI fix for trip confirm
fix 'add details' btn not appearing.
 -'surveyOpt' needs to recompute after dynamic config is loaded
fix text overlapping over 'add details' btn
 -changed the bottom 'diary-infos' to be vertically centered

--- a/www/css/main.diary.css
+++ b/www/css/main.diary.css
@@ -370,6 +370,10 @@ a.item-content {
   height: 50%;
 }
 
+.diary-infos:nth-child(2) {
+  justify-content: center;
+}
+
 .diary-distance-time {
   font-style: normal;
   font-weight: bold;
